Updated layout issue where project cards on portfolio pages had awkward spacing between them

--- a/src/app/modules/home/components/home/home.component.css
+++ b/src/app/modules/home/components/home/home.component.css
@@ -8,7 +8,7 @@
 
 @media only screen and (min-width: 575px) {
   .project-card {
-    max-width: 300px;
+    max-width: 100%;
     height: 525px;
   }
 }
@@ -17,6 +17,7 @@
 .mat-card {
   display:flex;
   flex-direction: column;
+  width: 100%;
 }
 
 .mat-card-header {
